Koncentrator/OldFS/VPN/etc/iptables/rules.v4
# Generated by iptables-save v1.4.14 on Sun Apr  5 19:02:12 2015
*mangle
:PREROUTING ACCEPT [372:34871]
:INPUT ACCEPT [244:24170]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [86:50384]
:POSTROUTING ACCEPT [86:50384]
-A PREROUTING -p tcp -m tcp --dport 8080 -j MARK --set-xmark 0x1/0xffffffff
-A PREROUTING -p tcp -m tcp --dport 8443 -j MARK --set-xmark 0x1/0xffffffff
COMMIT
# Completed on Sun Apr  5 19:02:12 2015
# Generated by iptables-save v1.4.14 on Sun Apr  5 19:02:12 2015
*nat
:PREROUTING ACCEPT [328:31019]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [1:76]
:POSTROUTING ACCEPT [1:76]
-A PREROUTING -i eth0 -p tcp -m tcp --dport 80 -j REDIRECT --to-ports 8080
-A PREROUTING -i eth0 -p tcp -m tcp --dport 443 -j REDIRECT --to-ports 8443
COMMIT
# Completed on Sun Apr  5 19:02:12 2015
# Generated by iptables-save v1.4.14 on Sun Apr  5 19:02:12 2015
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [3:740]
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A INPUT -i tun0 -p tcp -m tcp --dport 8081 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 8082 -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -m mark --mark 0x1 -j DROP
-A INPUT -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 8443 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 443 -j ACCEPT

COMMIT
# Completed on Sun Apr  5 19:02:12 2015
